fixed alignment issures

--- a/smartbrain/src/index.css
+++ b/smartbrain/src/index.css
@@ -11,3 +11,10 @@ body {
     display: flex;
     justify-content: center;
 }
+
+.center-stack {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+}
